--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,13 @@ body {
   margin: 0;
   height: 100vh;
   min-width: 375px;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   font-family: "Roboto", sans-serif;
   background-color: hsl(212, 45%, 89%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-/* .attribution { font-size: 11px; text-align: center; }
-
-.attribution a { color: hsl(228, 45%, 44%); } */
 
 .qr-container {
   margin: 0;
