--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,50 @@
+
+
 body {
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   min-width: 375px;
-  /* max-width: 1440px; */
   font-family: "Roboto", sans-serif;
   background-color: hsl(212, 45%, 89%);
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 15px;
 }
 
-.qr-container {
+main{
   margin: 0;
   background-color: hsl(0, 0%, 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 325px;
-  border-radius: 20px;
+  width: 21rem;
+  border-radius: 1.5rem;
 }
 
 .qr-img {
-  border-radius: 30px;
-  width: 295px;
-  padding: 15px;
+  border-radius: 1.8rem;
+  width: 19rem;
+  padding: 1rem;
 }
 
-.qr-txt-lrg,
+h1,
 .qr-txt-small {
   text-align: center;
 }
 
-.qr-txt-lrg {
-  font-size: 23px;
-  font-weight: 700;
+h1{
+  font-weight: 700; 
   color: hsl(218, 44%, 22%);
-  padding: 0 30px 0 30px;
-  margin-top: 10px;
+  padding: 0 1rem;
+  margin-top: 1rem;
+  font-size: 1.5rem; 
 }
+
 
 .qr-txt-small {
   margin: 0;
-  font-size: 15px;
   font-weight: 400;
   color: hsl(220, 15%, 55%);
-  padding: 0 30px 40px 30px;
+  padding: 0 2.1rem 2.5rem 2.1rem;
 }
